--- a/pokedex-react/package.json
+++ b/pokedex-react/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint": "7.32.0",
+    "eslint-config-next": "^12.0.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.3"
+    "styled-components": "^5.3.11"
   }
 }
