--- a/pokedex-react/package.json
+++ b/pokedex-react/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "^12.0.4",
+    "mobx-react": "^7.6.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "zustand": "^4.3.9"
   }
 }
